@@ -1,3 +1,6 @@
+6/5/2004
+	- Fixes to LOCRecord.
+
 6/3/2004
 	- 1.6.4 released.
 
